[project]
dependencies = [
  "elevenlabs>=1.51.0,<2.0.0",
  "pyaudio>=0.2.14,<0.3.0",
  "black>=25.1.0,<26.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "mypy>=1.15.0,<2.0.0",
  "types-pyaudio>=0.2.16.20240516",
]
description = ""
name = "11labs"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[tool.mypy]
exclude = "(^|/|\\\\)(venv)($|/|\\\\)"
namespace_packages = true
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "elevenlabs.*"
